[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lyra"]

[project]
name = "lyra-automation"
version = "0.1.0"
description = "Extract guest-apartment bookings from Lyra Smart Brf calendar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.60.0",
]

[project.scripts]
lyra = "lyra.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
