[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lyra"]

[project]
name = "lyra-automation"
version = "0.1.0"
description = "Extract guest-apartment bookings from Lyra Smart Brf calendar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.60.0",
    "seam>=1.145.0",
]

[project.scripts]
lyra = "lyra.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.19",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
